Proyecto2/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sopes1-ingress
  namespace: p2-so1-2024
  labels:
    name: sopes1-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: 35.230.127.38.nip.io
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: go-client-service
                port:
                  number: 8080
            path: /grpc-go
          - pathType: Prefix
            backend:
              service:
                name: rust-client-service
                port:
                  number: 8081
            path: /grpc-rust
